[#100022870] Add time stamp into CSV file name

--- a/app/views/reports/show_runs_for_verification.html.erb
+++ b/app/views/reports/show_runs_for_verification.html.erb
@@ -25,7 +25,7 @@
       <th><%= translate_helper("vehicle") %></th>
       <th><%= translate_helper("driver") %></th>
       <th><%= translate_helper("actual_start_time") %></th>
-      <th><%= translate_helper("actual_end_time") %>/th>
+      <th><%= translate_helper("actual_end_time") %></th>
       <th><%= translate_helper("odometer_start") %></th>
       <th><%= translate_helper("odometer_end") %></th>
       <th><%= translate_helper("unpaid_break_time") %></th>
