Add direction to trips and repeating_trips model; Remove round_trip from both models

--- a/app/views/customers/_details_panel.html.haml
+++ b/app/views/customers/_details_panel.html.haml
@@ -26,7 +26,7 @@
         = f.label :last_name, translate_helper(:last_name) 
       .col-sm-9
         = f.text_field :last_name, class: 'form-control'
-    .form-group.col-sm-12.radio_buttons.optional.trip_proxy_is_round_trip
+    .form-group.col-sm-12.radio_buttons.optional
       .col-sm-3
         = f.label :gender, translate_helper(:gender) 
       .col-sm-9
