[fixes#100023264] Show direction flag on trip details and trips tab page

--- a/app/views/trips/_list.html.haml
+++ b/app/views/trips/_list.html.haml
@@ -3,6 +3,7 @@
     %th
     %th= translate_helper("pickup_date_column")
     %th= translate_helper("customer_column")
+    %th= translate_helper("trip_direction_column")
     %th= translate_helper("pickup_address_column") 
     %th= translate_helper("pickup_time_column") 
     %th= translate_helper("dropoff_address_column")
