[#103921294] Use 24 hours on calendar view

--- a/app/assets/stylesheets/v2_theme.scss
+++ b/app/assets/stylesheets/v2_theme.scss
@@ -77,6 +77,14 @@ th.fc-resourceName {
   background-color: yellow !important; 
 }
 
+.fc-day {
+  min-width: 60px;
+}
+
+.fc-state-highlight {
+  background-color: white !important;
+}
+
 /* overwrite .form-control that has 100% width */
 .form-control-inline {
   min-width: 0;
