--- a/app/views/shared/_date_time_picker_javascript.html.erb
+++ b/app/views/shared/_date_time_picker_javascript.html.erb
@@ -6,9 +6,9 @@
         buttonImageOnly: true,
         constrainInput: false,
         dateFormat: 'D yy-mm-dd',
-        hourGrid: 2,
-        hourMax: RidePilot.business_hours.end,
-        hourMin: RidePilot.business_hours.start,
+        hourGrid: 6,
+        //hourMin: RidePilot.business_hours.start,
+        //hourMax: RidePilot.business_hours.end,
         minuteGrid: 15,
         showOn: "both",
         stepHour: 1,
@@ -34,9 +34,9 @@
       buttonImage: "<%=  image_path 'calendar-clock.png' %>",
       buttonImageOnly: true,
       constrainInput: false,
-      hourGrid: 2,
-      hourMax: RidePilot.business_hours.end,
-      hourMin: RidePilot.business_hours.start,
+      hourGrid: 6,
+      //hourMin: RidePilot.business_hours.start,
+      //hourMax: RidePilot.business_hours.end,
       minuteGrid: 15,
       showOn: "both",
       stepHour: 1,
