Remove changing mintue at 15 step

--- a/app/views/shared/_date_time_picker_javascript.html.erb
+++ b/app/views/shared/_date_time_picker_javascript.html.erb
@@ -12,7 +12,7 @@
         minuteGrid: 15,
         showOn: "both",
         stepHour: 1,
-        stepMinute: 15,
+        //stepMinute: 15,
         timeFormat: 'hh:mm tt'
     });
   }
@@ -40,7 +40,7 @@
       minuteGrid: 15,
       showOn: "both",
       stepHour: 1,
-      stepMinute: 15,
+      //stepMinute: 15,
       timeFormat: 'hh:mm tt'
     });
   }
