--- a/app/views/users/show_change_expiration.html.erb
+++ b/app/views/users/show_change_expiration.html.erb
@@ -46,7 +46,7 @@
           minuteGrid: 15,
           showOn: "both",
           stepHour: 1,
-          stepMinute: 15,
+          //stepMinute: 15,
           timeFormat: 'hh:mm tt',
     });
   });
