Allow customer edit eligibilities

--- a/app/assets/stylesheets/v2_theme.scss
+++ b/app/assets/stylesheets/v2_theme.scss
@@ -96,3 +96,7 @@ th.fc-resourceName {
   background-color: grey !important;
   color: white !important;
 }
+
+.ineligible-reason {
+  padding: 10px 0px;
+}
