--- a/app/views/trips/_list.html.haml
+++ b/app/views/trips/_list.html.haml
@@ -1,8 +1,9 @@
-%table
+%table#tripsTable
   %tr
     %th
     %th= translate_helper("pickup_date_column")
     %th= translate_helper("customer_column")
+    %th= translate_helper("customer_phone_number_column")
     %th= translate_helper("trip_direction_column")
     %th= translate_helper("pickup_address_column") 
     %th= translate_helper("pickup_time_column") 
