--- a/app/views/trips/_row.html.erb
+++ b/app/views/trips/_row.html.erb
@@ -1,4 +1,4 @@
-<tr class="trip">
+<tr class="trip" data-trip-id=<%=trip.id%>>
   <td>
     <%= link_to(translate_helper("view"), trip_path(trip)) %>
   </td>
@@ -7,6 +7,15 @@
   </td>
   <td>
     <%= link_to trip.customer.name, trip.customer, :title => translate_helper("view_customer_record_link_text") %>
+  </td>
+  <td>
+    <% if trip.customer.try(:phone_number_1)%>
+      <%= trip.customer.try(:phone_number_1)%>
+    <% end%>
+    <% if trip.customer.try(:phone_number_2)%>
+      <br>
+      <%= trip.customer.try(:phone_number_2)%>
+    <% end %>
   </td>
   <td>
     <%= trip.is_return? ? translate_helper("return_trip") : translate_helper("outbound_trip") %>
@@ -29,9 +38,21 @@
     <% end %>
   </td>
   <td>
-    <%= image_tag("tick-circle.png") if trip.customer_informed %>
+    <% if can? :edit, trip  %>
+      <%= form_for trip, url: trip_callback_path(trip), remote: true, method: :patch, html: { class: 'change-trip-callback' } do |f| %>
+        <%= f.check_box :customer_informed, :onclick => "$(this).parents('form').submit()" %>
+      <% end %>
+    <% else %>
+      <%= image_tag("tick-circle.png") if trip.customer_informed %>
+    <% end %>
   </td>
   <td>
-    <%= display_trip_result(trip.trip_result) %>
+    <% if can? :edit, trip  %>
+      <%= form_for trip, url: trip_change_result_path(trip), remote: true, method: :patch, html: { class: 'change-trip-result' }  do |f| %>
+        <%= f.select :trip_result_id, @trip_results,  { :include_blank => true }, {class: 'form-control', :onchange => "$(this).parents('form').submit()"}  %>
+      <% end %>
+    <% else %>
+      <%= display_trip_result(trip.trip_result) %>
+    <% end %>
   </td>
 </tr>
