--- a/app/views/trips/callback.js.haml
+++ b/app/views/trips/callback.js.haml
@@ -1,3 +1,3 @@
 - if !@message.blank?
-  show_alert("#{@message}");
+  show_alert_dialog("#{@message}");
   $('#tripsTable tr[data-trip-id="#{@trip.id}"] .change-trip-callback input[type=checkbox]').val(#{@prev_customer_informed});
