--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,10 +53,10 @@
         <% if show_dispatch?   %><li class="dispatch"><%= link_to translate_helper("application_dispatch_link_text"), dispatch_path %></li><% end %>
       </ul>
       <ul id="secondary-nav" class="selfclear">
-        <% if current_user && current_user.editor? && can?(:read, current_user) %>
+        <% if can_access_admin_tab(current_user) %>
           <li class="admin"><%= link_to translate_helper("application_admin_link_text"), admin_path %></li>
         <% end %>
-        <% if current_user && current_user.admin? && can?(:read, Provider) %>
+        <% if can_access_provider_settings_tab(current_user, current_provider) %>
           <li class="vehicles-drivers-users"><%= link_to translate_helper("current_provider_settings_link_text"), provider_path(current_user.current_provider) %></li>
         <% end %>
       </ul>
