--- a/app/views/trips/index.html.haml
+++ b/app/views/trips/index.html.haml
@@ -10,5 +10,5 @@
 .col-md-9{style: 'padding: 0px;'}
   = render 'calendar', base_path: trips_path, resources: @day_resources, events: @trips_json
 
-  = render :partial => 'list'
+  = render 'list'
 
