--- a/app/views/trips/_customer.html.erb
+++ b/app/views/trips/_customer.html.erb
@@ -10,16 +10,7 @@
     :size => 30, 
     :update_elements => {
       :id                        => '#trip_customer_id,#trip_customer_attributes_id',
-      :phone_number_1            => '#trip_customer_attributes_phone_number_1', 
-      :phone_number_2            => '#alt_phone',
-      :mobility_notes            => '#mobility_notes',
-      :mobility_id               => '#trip_mobility_id',
-      :private_notes             => '#customer_private_notes',
-      :group                     => '#trip_group',
-      :address_id                => "#trip_pickup_address_id",
-      :address                   => "#pickup_search_address",
-      :default_funding_source_id => "#trip_funding_source_id",
-      :default_service_level     => "#trip_service_level",
+      :group                        => '#trip_group',
       :message                   => "#customer_flag_message"
     },
     :class => "form-control",
@@ -48,6 +39,19 @@
       popupFlagMessage(data.item.message);
     });
 
+    function updateUponCustomerChange(customerData) {
+      $('#trip_customer_attributes_phone_number_1').val(customerData.phone_number_1); 
+      $('#alt_phone').val(customerData.phone_number_2);
+      $('#mobility_notes').val(customerData.mobility_notes);
+      $('#trip_mobility_id').val(customerData.mobility_id);
+      $('#customer_private_notes').val(customerData.private_notes);
+      $("#trip_pickup_address_id").val(customerData.address_id);
+      $("#pickup_search_address").val(customerData.address);
+      $("#trip_funding_source_id").val(customerData.default_funding_source_id);
+      $("#trip_service_level").val(customerData.default_service_level);
+      $('#trip_medicaid_eligible').attr('checked',customerData.medicaid_eligible);
+    }
+
     $('#new_trip #customer_name').bind('railsAutocomplete.select', function(event, data){ 
       if ($("#trip_group").val() == "true") {
         $("li.passengers").hide();
@@ -57,8 +61,15 @@
         $("li.group_size").hide();
       }
 
-      $('#pickup_search_address').attr('data-autocomplete', "<%=autocomplete_addresses_path%>?customer_id=" + data.item.id);
-      $('#dropoff_search_address').attr('data-autocomplete', "<%=autocomplete_addresses_path%>?customer_id=" + data.item.id);
+      var customerId = data.item.id;
+      $('#pickup_search_address').attr('data-autocomplete', "<%=autocomplete_addresses_path%>?customer_id=" + customerId);
+      $('#dropoff_search_address').attr('data-autocomplete', "<%=autocomplete_addresses_path%>?customer_id=" + customerId);
+
+      $.post("<%= data_for_trip_customers_path %>", {
+          customer_id: customerId
+        }, function(customerData) {
+          updateUponCustomerChange(customerData);
+        });
     });
   });
 <% end %>
