[#104241170]When a customer is selected on trip form, if create a new address, then address is owned by the selected customer

--- a/app/views/trips/_find_or_create_address.html.erb
+++ b/app/views/trips/_find_or_create_address.html.erb
@@ -1,5 +1,6 @@
  <%= form_tag addresses_path, :class=>'address-search', :method=>:post, :remote=>true, 'data-id-element' => "#trip_#{prefix}_address_id", 'data-label-element' => "##{prefix}_search_address" do %> 
   <%= hidden_field_tag 'address_id', address.id %>
+  <%= hidden_field_tag 'customer_id', address.customer_id %>
   <%= hidden_field_tag 'prefix', prefix %>
   <%= hidden_field_tag 'lat' %>
   <%= hidden_field_tag 'lon' %>
