[fixes#104241170] Escape quotes from address json string

--- a/app/views/customers/_donations_panel.html.haml
+++ b/app/views/customers/_donations_panel.html.haml
@@ -49,7 +49,7 @@
     });
 
     function insertDonationRow(donationData) {
-      $('#customerDonationsTable').append("<tr data-donation='" + JSON.stringify(donationData) + "'>" +
+      $('#customerDonationsTable').append("<tr data-donation='" + escapeQuotes(JSON.stringify(donationData)) + "'>" +
           '<td><button class="deleteCustomerDonation btn-danger" name="button" type="button">Delete</button></td>' +
           "<td>" + donationData.date + '</td>' +
           "<td>" + donationData.amount + "</td>" +
