Add eligibility_accommodation panel in trips form

--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -23,6 +23,7 @@
   <div class="col-sm-12 col-md-6">
     <%= render 'customer_panel', f: f, edit_mode: edit_mode %>
     <%= render 'trip_parameters_panel', f: f, edit_mode: edit_mode %>
+    <%= render 'eligibility_accommodation_panel', f: f, edit_mode: edit_mode %>
   </div>
   <div class="col-sm-12 col-md-6">
     <%= render 'repetition_panel', f: f %>
