Add phone number to drivers; Hide phone number from driver address form

--- a/app/views/drivers/_form.html.erb
+++ b/app/views/drivers/_form.html.erb
@@ -24,6 +24,12 @@
             </div>
           </div>  
           <div class="form-group">
+              <%= f.label :phone_number, translate_helper("phone_number"), class: "col-md-2 control-label" %>
+            <div class="col-md-10">
+              <%= f.text_field :phone_number, class: "form-control", disabled: @readonly %>
+            </div>
+          </div>  
+          <div class="form-group">
             <%= f.label :email, translate_helper("driver_form_email"), class: "col-md-2 control-label" %>
             <div class="col-md-10">
               <%= f.text_field :email, class: "form-control", disabled: @readonly %>
@@ -101,13 +107,6 @@
                 <%= address_form.label :notes, translate_helper("address_notes"), class: "col-md-2 control-label" %>
               <div class="col-md-10">
                 <%= address_form.text_area :notes, rows: 3, class: "form-control", disabled: @readonly %>
-              </div>
-            </div>  
-
-            <div class="form-group">
-                <%= address_form.label :phone_number, translate_helper("phone_number"), class: "col-md-2 control-label" %>
-              <div class="col-md-10">
-                <%= address_form.text_field :phone_number, class: "form-control", disabled: @readonly %>
               </div>
             </div>  
           <% end %>
