--- a/app/views/vehicles/_vehicle.html.erb
+++ b/app/views/vehicles/_vehicle.html.erb
@@ -21,7 +21,7 @@
     <%= vehicle.garaged_location %>
   </td>
   <td>
-    <%= vehicle.default_driver.try :name %>
+    <%= vehicle.default_driver.try(:name) || "Not set" %>
   </td>
   <td>
     <%= vehicle.active ? translate_helper("active") : translate_helper("inactive") %>
