--- a/app/views/reporting/results/index.html.haml
+++ b/app/views/reporting/results/index.html.haml
@@ -27,7 +27,7 @@
         %tr
           - @fields.each do |field|
             %th
-              = sort_link @q, (field[:title] || field[:name])
+              = sort_link @q, (field[:alias_name] || field[:name]), (field[:title] || field[:name])
       %tbody
         - @results.each do |result|
           %tr
