--- a/app/views/customers/_details_panel.html.haml
+++ b/app/views/customers/_details_panel.html.haml
@@ -14,6 +14,11 @@
     - if edit_mode == :show
       .form-group.col-sm-12
         .col-sm-3
+          = f.label :id, translate_helper(:customer_id_label) 
+        .col-sm-9
+          = @customer.id
+      .form-group.col-sm-12
+        .col-sm-3
           = f.label :token, translate_helper(:customer_token_label) 
         .col-sm-9
           = @customer.token
