--- a/app/views/providers/show.html.erb
+++ b/app/views/providers/show.html.erb
@@ -27,7 +27,8 @@
     <th><%= translate_helper("city") %></th>
     <th><%= translate_helper("state") %></th>
     <th><%= translate_helper("phone_number") %></th>
-    <th></th>
+    <th><%= translate_helper("in_district") %></th>
+    <th><%= translate_helper("address_notes") %></th>
     <% if can? :edit, Vehicle %>
     <th></th>
     <% end %>
