Refactor to use one address form field set; Add supporting adding address on provider profile

--- a/app/views/addresses/edit.html.erb
+++ b/app/views/addresses/edit.html.erb
@@ -19,10 +19,16 @@
       </ul>
     </div>
   <% end %>
+
+  <%= form.hidden_field :provider_id %>
   
   <fieldset>
     <ol class="section first">
-      <%= render 'form', :form => form, :editing_address => true %>
+      <%= render 'form', :form => form %>
+      <li class="selfclear">
+        <%= form.label :inactive, translate_helper("inactive") %>
+        <%= form.check_box :inactive %>
+      </li>
     </ol>
   </fieldset>
   
