--- a/app/views/providers/show.html.erb
+++ b/app/views/providers/show.html.erb
@@ -42,6 +42,10 @@
 
 <%= render 'addresses/upload_form', provider: @provider %>
 
+<%= render 'new_address_dialog' %>
+
+<p><%= link_to translate_helper("create_provider_address_text"), '#', id: 'addProviderCommonAddress', class:'newAddress action-bttn' %></p>
+
 <hr />
 
 <h2 class="section-header">Users</h2>
