--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -39,10 +39,10 @@
   <%= render 'customer_message_dialog' %>
   <% unless add_new_trip_via_run_page? %>
     <div class="address-form" id="pickup-address-form">
-      <%= render :partial=>'find_or_create_address', :locals=>{:prefix=>'pickup', :address => @trip.pickup_address || @trip.build_pickup_address } %>
+      <%= render :partial=>'addresses/new_form', :locals=>{:prefix=>'pickup', :address => @trip.pickup_address || @trip.build_pickup_address } %>
     </div>
     <div class="address-form" id="dropoff-address-form">
-      <%= render :partial=>'find_or_create_address', :locals=>{:prefix=>'dropoff', :address => @trip.dropoff_address || @trip.build_dropoff_address } %>
+      <%= render :partial=>'addresses/new_form', :locals=>{:prefix=>'dropoff', :address => @trip.dropoff_address || @trip.build_dropoff_address } %>
     </div>
   <% end %>
 <% end %>
