--- a/app/views/addresses/edit.html.erb
+++ b/app/views/addresses/edit.html.erb
@@ -24,7 +24,7 @@
   
   <fieldset>
     <ol class="section first">
-      <%= render 'form', :form => form %>
+      <%= render 'form_fields', :form => form, address: @address, prefix: 'address' %>
       <li class="selfclear">
         <%= form.label :inactive, translate_helper("inactive") %>
         <%= form.check_box :inactive %>
@@ -45,7 +45,7 @@
         <ol class="section">
           <li>
           <%= label_tag translate_helper("address_search") %>
-          <%= autocomplete_field_tag 'address_term', '', autocomplete_addresses_path, :size => 30, :id_element => "#address_id" %>
+          <%= autocomplete_field_tag 'address_term', '', autocomplete_addresses_path, :size => 30, :delay => 500, :id_element => "#address_id" %>
           <%= hidden_field_tag 'address_id' %>
           </li>
         </ol>
