--- a/app/views/providers/_new_address_dialog.html.erb
+++ b/app/views/providers/_new_address_dialog.html.erb
@@ -18,13 +18,14 @@
         for (var field in data) {
           text_field = $('#' + data.prefix + "_" + field);
           error_element = text_field.attr('data-error-element');
+          error_message = field + " " + data[field] + "; ";
           if (!error_element) {
             error_element_id = data.prefix + "_" + field
-            text_field.after('<span class="error" id="' + error_element_id + '">' + data[field] + "</span>");
+            text_field.after('<span class="error" id="' + error_element_id + '">' + error_message + "</span>");
             error_element = "#" + error_element_id;
             text_field.attr('data-error-element', error_element);
           }
-          $(error_element).innerHtml = data[field]
+          $(error_element).innerHtml = error_message;
         }
       }
     })
