--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -48,3 +48,4 @@
 <% end %>
 
 <%= render 'shared/hide_invisible_form_fields_js', model_name: "trip", table_name: 'trips', provider_id:  current_provider.try(:id) %>
+<%= render 'shared/google_maps/google_map_api' %>
