--- a/app/views/trips/_javascript.html.erb
+++ b/app/views/trips/_javascript.html.erb
@@ -91,13 +91,14 @@
         for (var field in data) {
           text_field = $('#' + data.prefix + "_" + field);
           error_element = text_field.attr('data-error-element');
+          error_message = field + " " + data[field] + "; ";
           if (!error_element) {
             error_element_id = data.prefix + "_" + field
-            text_field.after('<span class="error" id="' + error_element_id + '">' + data[field] + "</span>");
+            text_field.after('<span class="error" id="' + error_element_id + '">' + error_message + "</span>");
             error_element = "#" + error_element_id;
             text_field.attr('data-error-element', error_element);
           }
-          $(error_element).innerHtml = data[field]
+          $(error_element).innerHtml = error_message;
         }
       }
     })
@@ -126,6 +127,7 @@
               $("#trip_" + prefix + "_address_id").val(field.attr("data-original-id"));
               if (parseInt(field.attr("data-original-id")) > 0)
                   $("." + prefix + "_address_details").show();
+              $(this).find('form')[0].reset();
           }
       });
     };
