[fixes#105676830] Make help icon smaller

--- a/app/assets/stylesheets/v2_theme.scss
+++ b/app/assets/stylesheets/v2_theme.scss
@@ -110,3 +110,7 @@ table.dataTable tbody tr.selected {
 .trip_table_result_column {
   min-width: 120px;
 }
+
+.label-help {
+  font-size: small;
+}
