--- a/app/views/trips/_trip_parameters_panel.html.haml
+++ b/app/views/trips/_trip_parameters_panel.html.haml
@@ -3,6 +3,17 @@
     %h3.panel-title
       = translate_helper(:trip_parameters)
   .panel-body{style: 'padding: 5px;'}
+    - if edit_mode == :show && @trip.is_linked?
+      .form-group.col-sm-12
+        .col-sm-3
+          = label_tag :linked_trip, @trip.is_return? ? translate_helper("return_trip_label") : translate_helper("outbound_trip_label")
+        .col-sm-9
+          - if @trip.is_return?
+            %a{href: trip_path(@trip.outbound_trip) }
+              = @trip.outbound_trip.id
+          - else
+            %a{href: trip_path(@trip.return_trip) }
+              = @trip.return_trip.id
     .form-group.col-sm-12
       .col-sm-3
         = f.label :pickup_time, translate_helper("pickup_time")
